--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -9,9 +9,18 @@ jobs:
   build:
     name: Build distribution
     runs-on: ubuntu-latest
-
+    
     steps:
-    - uses: actions/checkout@v4
+    - name: Check if pull request is merged into main
+      if: |
+        github.event.pull_request.merged == true &&
+        github.event.pull_request.base.ref == 'main'
+      run: |
+        echo "Pull request has been accepted and merged into the main branch!"
+
+    - name: Checkout code
+      uses: actions/checkout@v4
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
