--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "datateam_moss"
 version = "0.0.13"
 authors = [
   { name="Robbin Breeuwer", email="r.j.breeuwer@amsterdam.nl" },
-  { name="Fried Schölvink", email="f.scholvinck@amsterdam.nl"}
+  { name="Fried Schölvinck", email="f.scholvinck@amsterdam.nl"}
 ]
 description = "Functions needed for datateam MOSS (municipality of Amsterdam)"
 readme = "README.md"
