--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -9,29 +9,20 @@ jobs:
   build:
     name: Build distribution
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Check if pull request is merged into main
-      if: |
-        github.event.pull_request.merged == true &&
-        github.event.pull_request.base.ref == 'main'
-      run: |
-        echo "Pull request has been accepted and merged into the main branch!"
+      - name: Check if pull request is merged into main
+        if: |
+          github.event.pull_request.merged == true &&
+          github.event.pull_request.base.ref == 'main'
+        run: |
+          echo "Pull request has been accepted and merged into the main branch!"
 
-        # Install jq
-        sudo apt-get update
-        sudo apt-get install jq
+          # Install bump2version
+          pip install bump2version
 
-        # Parse the current version from the TOML file
-        current_version=$(jq -r '.project.version' pyproject.toml)
-
-        # Bump the version (you can adjust the part to bump: major, minor, or patch)
-        bump2version patch
-
-        # Parse the new version
-        new_version=$(jq -r '.project.version' pyproject.toml)
-
-        echo "Bumped version from $current_version to $new_version"
+          # Bump the version (you can adjust the part to bump: major, minor, or patch)
+          bump2version patch
 
     - name: Checkout code
       uses: actions/checkout@v4
@@ -40,15 +31,13 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: "3.x"
-        
+
     - name: Install pypa/build
-      run: >-
-        python3 -m
-        pip install
-        build
-        --user
+      run: python -m pip install build --user
+
     - name: Build a binary wheel and a source tarball
-      run: python3 -m build
+      run: python -m build
+
     - name: Store the distribution packages
       uses: actions/upload-artifact@v3
       with:
@@ -60,12 +49,10 @@ jobs:
     needs:
       - build
     runs-on: ubuntu-latest
-    # Specifying a GitHub environment is optional, but strongly encouraged
     environment:
       name: production
       url: https://pypi.org/p/datateam_moss
     permissions:
-      # IMPORTANT: this permission is mandatory for trusted publishing
       id-token: write
     steps:
       - name: Download all the dists
@@ -73,6 +60,6 @@ jobs:
         with:
           name: python-package-distributions
           path: dist/
-  
+
       - name: Publish package distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
