--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -17,10 +17,12 @@ jobs:
           github.event.pull_request.base.ref == 'main'
         run: |
           echo "Pull request has been accepted and merged into the main branch!"
-          
+
           # Install bump2version
           pip install bump2version
 
+      - name: Bump version
+        run: |
           # Bump the version (you can adjust the part to bump: major, minor, or patch)
           bump2version patch
 
