--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = [
+  "setuptools>=61.0",
+  "wheel",
+  "tabulate==0.9.0"
+]
 build-backend = "setuptools.build_meta"
 
 [project]
