added pandas and bumped version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,13 +2,14 @@
 requires = [
   "setuptools>=61.0",
   "wheel",
-  "tabulate==0.9.0"
+  "tabulate==0.9.0",
+  "pandas==1.4.4",
 ]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "datateam_moss"
-version = "0.0.28"
+version = "0.0.29"
 authors = [
   { name="Robbin Breeuwer", email="r.j.breeuwer@amsterdam.nl" },
   { name="Fried Schölvinck", email="f.scholvinck@amsterdam.nl"}
