--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,13 @@ requires = [
   "wheel",
   "tabulate==0.9.0",
   "pandas==1.4.4",
+  "xxhash"=="*"
 ]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "datateam_moss"
-version = "0.0.30"
+version = "0.0.31"
 authors = [
   { name="Robbin Breeuwer", email="r.j.breeuwer@amsterdam.nl" },
   { name="Fried Schölvinck", email="f.scholvinck@amsterdam.nl"}
