--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = [
   "wheel",
   "tabulate==0.9.0",
   "pandas==1.4.4",
-  "xxhash"=="*"
+  "xxhash"="*"
 ]
 build-backend = "setuptools.build_meta"
 
