--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,6 @@
 requires = [
   "setuptools>=61.0",
   "wheel",
-  "tabulate==0.9.0",
-  "pandas==1.4.4",
-  "xxhash"
 ]
 build-backend = "setuptools.build_meta"
 
@@ -21,3 +18,5 @@ requires-python = ">=3.10"
 
 [dependencies]
 xxhash = "*"
+tabulate=="0.9.0",
+pandas=="1.4.4",
