--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ description = "Functions needed for datateam MOSS (municipality of Amsterdam)"
 readme = "README.md"
 requires-python = ">=3.10"
 
-[dependencies]
-xxhash = "*"
-tabulate=="0.9.0",
-pandas=="1.4.4",
+dependencies = [
+  "tabulate==0.9.0",
+  "pandas==1.4.4",
+  "xxhash"
+]
