--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -11,13 +11,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check if pull request is merged into main
-        if: |
-          github.event.pull_request.merged == true &&
-          github.event.pull_request.base.ref == 'main'
-        run: |
-          echo "Pull request has been accepted and merged into the main branch!"
-
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -26,11 +19,23 @@ jobs:
         with:
           python-version: "3.x"
 
-      - name: Install pypa/build
-        run: python -m pip install build --user
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
 
       - name: Build a binary wheel and a source tarball
         run: python -m build
+
+      - name: Run tests
+        run: pytest tests/
+
+      - name: Check if pull request is merged into main
+        if: |
+          github.event.pull_request.merged == true &&
+          github.event.pull_request.base.ref == 'main'
+        run: |
+          echo "Pull request has been accepted and merged into the main branch!"
 
       - name: Store the distribution packages
         uses: actions/upload-artifact@v3
