--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -6,8 +6,8 @@ on:
       - dev
 
 jobs:
-  build-and-test:
-    name: Build and Test
+  lint:
+    name: Lint, Build and Test
     runs-on: ubuntu-latest
 
     steps:
@@ -17,18 +17,21 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+          python-version: "3.10"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+      - name: Install ruff
+        run: pip install ruff
 
-      - name: Build a binary wheel and a source tarball
-        run: python -m build
+      - name: Run ruff
+        run: ruff src/
+      # - name: Install dependencies
+      #   run: |
+      #     python -m pip install --upgrade pip
+      #     python -m pip install -r requirements.txt
+
+      # - name: Build a binary wheel and a source tarball
+      #   run: python -m build
       
-      - name: Run linting
-        run: pylint src/
 
-      - name: Run tests
-        run: pytest tests/
+      # - name: Run tests
+      #   run: pytest tests/
