--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "datateam_moss"
-version = "0.1.0"
+version = "0.1.1"
 authors = [
+  { name="Moethoeli Hooplot", email="moethoeli.hooplot.breeuwer@amsterdam.nl" },
+  { name="Hilal Aydin", email="hilal.aydin.breeuwer@amsterdam.nl" },
   { name="Robbin Breeuwer", email="r.j.breeuwer@amsterdam.nl" },
   { name="Koen Hallmann", email="k.hallmann@amsterdam.nl"}
 ]
