--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "datateam_moss"
-version = "0.1.8"
+version = "0.1.9"
 authors = [
   { name="Moethoeli Hooplot", email="moethoeli.hooplot@amsterdam.nl" },
   { name="Hilal Aydin", email="hilal.aydin@amsterdam.nl" },
@@ -20,5 +20,8 @@ requires-python = ">=3.10"
 dependencies = [
   "tabulate==0.9.0",
   "pandas==1.4.4",
-  "xxhash==3.4.1"
+  "xxhash==3.4.1",
+  "opentelemetry-sdk==1.39.1",
+  "azure-monitor-opentelemetry-exporter==1.0.0b46",
+  "azure-mgmt-monitor==7.0.0",
 ]
