--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,7 @@ databricks-cli==0.18.0
 tabulate==0.9.0
 pandas==1.4.4
 xxhash==3.4.1
+
+opentelemetry-sdk==1.39.1
+azure-monitor-opentelemetry-exporter==1.0.0b46
+azure-mgmt-monitor==7.0.0
