--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "datateam_moss"
-version = "0.1.9"
+version = "0.2.0"
 authors = [
   { name="Moethoeli Hooplot", email="moethoeli.hooplot@amsterdam.nl" },
   { name="Hilal Aydin", email="hilal.aydin@amsterdam.nl" },
-  { name="Koen Hallmann", email="k.hallmann@amsterdam.nl"}
+  { name="Koen Hallmann", email="k.hallmann@amsterdam.nl"},
+  { name="Daniela Anguelova", email="d.anguelova@amsterdam.nl"},
+  { name="Peter Verschueren", email="p.verschueren@amsterdam.nl"}
 ]
 description = "Functions needed for datateam MOSS (municipality of Amsterdam)"
 readme = "README.md"
