--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,7 @@ build-backend = "setuptools.build_meta"
 name = "datateam_moss"
 version = "0.2.3"
 authors = [
-  { name="Moethoeli Hooplot", email="moethoeli.hooplot@amsterdam.nl" },
-  { name="Hilal Aydin", email="hilal.aydin@amsterdam.nl" },
-  { name="Koen Hallmann", email="k.hallmann@amsterdam.nl"},
-  { name="Daniela Anguelova", email="d.anguelova@amsterdam.nl"},
-  { name="Peter Verschueren", email="p.verschueren@amsterdam.nl"}
+  { name="XX", email="x@x.nl" }
 ]
 description = "Functions needed for datateam MOSS (municipality of Amsterdam)"
 readme = "README.md"
